argocd/k8s/changedetection/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: changedetection
  namespace: changedetection
  labels:
    app: changedetection
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: changedetection
  template:
    metadata:
      labels:
        app: changedetection
        homelab.io/glance-visible: "true"
    spec:
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: changedetection
          image: "ghcr.io/dgtlmoon/changedetection.io:0.60.8"
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: datastore
              mountPath: /datastore
      volumes:
        - name: datastore
          persistentVolumeClaim:
            claimName: changedetection-datastore
