argocd/k8s/changedetection/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: changedetection
  namespace: changedetection
  labels:
    app: changedetection
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: changedetection
