argocd/k8s/changedetection/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: changedetection-http-route
  namespace: changedetection
spec:
  parentRefs:
    - name: homelab-gw
      namespace: cilium-gateway
      sectionName: homelab-https
  hostnames:
    - "changedetection.homelab.ikabbash.com" 
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: changedetection
          port: 80
