argocd/k8s/changedetection/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: changedetection
  namespace: changedetection
specs:
  - endpointSelector:
      matchLabels:
        app: changedetection
    ingress:
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: authentik
              app.kubernetes.io/instance: authentik
  - endpointSelector: {}
    ingress:
      - {}
    egress:
      - {}
